<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/menu_settings">
        <ListPreference android:title="Sort by..."
                        android:summary="Choose how to sort the list."
                        android:key="sortie"
                        android:entries="@array/sortBy"
                        android:entryValues="@array/listValues"
                        android:defaultValue="subTitle" />
        <CheckBoxPreference android:title="@string/preferences_access_notification"
                            android:defaultValue="false"
                            android:summary="@string/preferences_notification"
                            android:key="notification" />
        <CheckBoxPreference android:title="@string/preferences_hide_paste"
                            android:defaultValue="false"
                            android:summary="@string/preferences_hide_paste_summary"
                            android:key="hidePasteText" />
        <!-- Commenting out for not so it isn't surfaced but is a planned feature
        <CheckBoxPreference android:title="Copy on Launch"
                            android:defaultValue="false"
                            android:summary="When checked, whatever contents in your clipboard when you launch the app will be added to a separate list for easy access."
                            android:key="clipLaunch" />
        -->
        <Preference android:title="@string/preferences_wipe_data"
                    android:summary="@string/preferences_wipe_data_summary"
                    android:key="deleteAll" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/preferences_misc">
        <Preference android:title="@string/preferences_tutorial" android:summary="@string/preferences_view_tutorial" android:key="tutorial" />
        <Preference android:title="@string/preferences_about" android:key="aboutizzle" />
    </PreferenceCategory>
</PreferenceScreen>
